all po files updated from develop at 2019-11-19 19:52

--- a/po/vi.po
+++ b/po/vi.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-18 19:05+0100\n"
-"PO-Revision-Date: 2019-11-18 07:26+0700\n"
+"PO-Revision-Date: 2019-11-19 08:58+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
 "Language: vi\n"
@@ -748,9 +748,8 @@ msgstr "Thêm một tiêu đề mới"
 msgid "Add bookmark"
 msgstr "Thêm dấu trang"
 
-#, fuzzy
 msgid "Add bouquet"
-msgstr "thêm gói kênh"
+msgstr "Thêm gói kênh"
 
 msgid "Add directory to playlist"
 msgstr "Thêm thư mục vào danh sách phát"
@@ -779,9 +778,8 @@ msgstr "Thêm ghi âm (dừng sau sự kiện hiện tại)"
 msgid "Add service"
 msgstr "Thêm dịch vụ"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
-msgstr "thêm dịch vụ vào gói kênh"
+msgstr "Thêm dịch vụ vào gói kênh?"
 
 msgid "Add timer"
 msgstr "Thêm bộ đếm thời gian"
@@ -816,11 +814,8 @@ msgstr "Nâng cao"
 msgid "Advanced options"
 msgstr "Tùy chọn nâng cao"
 
-#, fuzzy
 msgid "Advanced options and settings."
-msgstr ""
-"\n"
-"Tùy chọn và cài đặt nâng cao."
+msgstr "Tùy chọn và cài đặt nâng cao."
 
 msgid "Advanced restore"
 msgstr "Khôi phục nâng cao"
@@ -1288,11 +1283,8 @@ msgstr "Cài đặt sao lưu"
 msgid "Backup system settings"
 msgstr "Cài đặt hệ thống sao lưu"
 
-#, fuzzy
 msgid "Backup your receiver settings."
-msgstr ""
-"\n"
-"Sao lưu cài đặt máy thu của bạn."
+msgstr "Sao lưu cài đặt máy thu của bạn."
 
 msgid "Bahamas"
 msgstr "Ba Tư"
@@ -1678,9 +1670,8 @@ msgstr "Kênh truyền hình"
 msgid "Channels and EPG"
 msgstr "Kênh và EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Kênh truyền hình"
+msgstr "Chỉ các kênh"
 
 msgid "Chap."
 msgstr "Chap."
@@ -2979,7 +2970,7 @@ msgid "EPG language selection 2"
 msgstr "Lựa chọn ngôn ngữ EPG 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "Chỉ EPG"
 
 msgid "EPG selection"
 msgstr "Lựa chọn EPG"
@@ -3028,11 +3019,8 @@ msgstr "Chỉnh sửa cấu hình máy chủ tên của máy thu của bạn.\n"
 msgid "Edit the network configuration of your receiver.\n"
 msgstr "Chỉnh sửa cấu hình mạng của máy thu của bạn.\n"
 
-#, fuzzy
 msgid "Edit the update source address."
-msgstr ""
-"\n"
-"Chỉnh sửa địa chỉ nguồn nâng cấp."
+msgstr "Chỉnh sửa địa chỉ nguồn nâng cấp."
 
 msgid "Edit timer"
 msgstr "Chỉnh sửa bộ đếm thời gian"
@@ -3040,9 +3028,8 @@ msgstr "Chỉnh sửa bộ đếm thời gian"
 msgid "Edit title"
 msgstr "Chỉnh sửa tiêu đề"
 
-#, fuzzy
 msgid "Edit update source url"
-msgstr "Chỉnh sửa url nguồn nâng cấp."
+msgstr "Chỉnh sửa url nguồn nâng cấp"
 
 msgid "Education/Science/..."
 msgstr "Giáo dục / Khoa học / ..."
@@ -4164,7 +4151,7 @@ msgid "Icons"
 msgstr "Biểu tượng"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Nếu bị tắt, các ký tự gạch chân trong tên tệp và thư mục sẽ không được hiển thị và được thay thế bằng dấu cách."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Nếu được bật, dấu trang sẽ được cập nhật với vị trí mới khi bạn di chuyển hoặc sao chép bản ghi."
@@ -4238,24 +4225,23 @@ msgid "Image: "
 msgstr "Hình ảnh: "
 
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
-msgstr "Nhập kênh và / hoặc EPG từ URL người nhận từ xa cũng khi người nhận thoát khỏi chế độ chờ"
+msgstr "Nhập kênh và / hoặc EPG từ URLmáy thu từ xa cũng khi máy thu thoát khỏi chế độ chờ"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Nhập kênh từ URL người nhận từ xa khi khởi động máy thu"
+msgstr "Nhập kênh và / hoặc EPG từ URL máy thu từ xa khi máy thu được khởi động"
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
-msgstr "Nhập kênh và / hoặc EPG từ URL người nhận từ xa khi người nhận hoặc enigma2 được khởi động lại"
+msgstr "Nhập kênh và / hoặc EPG từ URL máy thu từ xa khi máy thu hoặc enigma2 được khởi động lại"
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
 msgstr "Nhập từ bộ điều chỉnh dự phòng không thành công,%s"
 
 msgid "Import from remote receiver URL"
-msgstr "Nhập từ URL người nhận từ xa"
+msgstr "Nhập từ URL máy thu từ xa"
 
 msgid "Import remote receiver URL"
-msgstr "Nhập URL người nhận từ xa"
+msgstr "Nhập URL máy thu từ xa"
 
 msgid "In order to record a timer, the TV was switched to the recording service!\n"
 msgstr "Để ghi âm hẹn giờ, TV đã được chuyển sang dịch vụ ghi âm!\n"
@@ -4363,7 +4349,7 @@ msgid "Input devices"
 msgstr "Thiết bị đầu vào"
 
 msgid "Install"
-msgstr "Ráp vào"
+msgstr "Cài vào"
 
 msgid "Install channel list"
 msgstr "Cài đặt danh sách kênh"
@@ -4822,11 +4808,8 @@ msgstr "Malta"
 msgid "Manage extensions"
 msgstr "Quản lý tiện ích mở rộng"
 
-#, fuzzy
 msgid "Manage extensions or plugins for your receiver."
-msgstr ""
-"\n"
-"Quản lý tiện ích mở rộng hoặc plugin cho đầu thu của bạn"
+msgstr "Quản lý tiện ích mở rộng hoặc plugin cho đầu thu của bạn."
 
 msgid "Manage your receiver's software"
 msgstr "Quản lý phần mềm người nhận của bạn"
@@ -5550,11 +5533,8 @@ msgstr "Trên các ONID hợp lệ, bỏ qua phần mạng phụ tần số"
 msgid "One"
 msgstr "Một"
 
-#, fuzzy
 msgid "Online update of your receiver software."
-msgstr ""
-"\n"
-"Cập nhật trực tuyến phần mềm nhận của bạn."
+msgstr "Cập nhật trực tuyến phần mềm nhận của bạn."
 
 msgid "Only change this setting if you are using a SCR device that has been reprogrammed with a custom programmer. For further information check with the person that reprogrammed the device."
 msgstr "Chỉ thay đổi cài đặt này nếu bạn đang sử dụng thiết bị SCR đã được lập trình lại với một lập trình viên tùy chỉnh. Để biết thêm thông tin, hãy kiểm tra với người đã lập trình lại thiết bị."
@@ -6692,17 +6672,11 @@ msgstr "Khôi phục bản sao lưu"
 msgid "Restore system settings"
 msgstr "Khôi phục cài đặt hệ thống"
 
-#, fuzzy
 msgid "Restore your backups by date."
-msgstr ""
-"\n"
-"Khôi phục bản sao lưu của bạn theo ngày."
+msgstr "Khôi phục bản sao lưu của bạn theo ngày."
 
-#, fuzzy
 msgid "Restore your receiver settings."
-msgstr ""
-"\n"
-"Khôi phục cài đặt máy thu của bạn."
+msgstr "Khôi phục cài đặt máy thu của bạn."
 
 msgid "Restoring..."
 msgstr "Khôi phục ..."
@@ -6752,13 +6726,13 @@ msgid "Rewrap subtitles"
 msgstr "Viết lại phụ đề"
 
 msgid "Right"
-msgstr "Đúng"
+msgstr "Phải"
 
 msgid "Right from servicename"
 msgstr "Ngay từ tên dịch vụ"
 
 msgid "Roll-off"
-msgstr "Lăn khỏi"
+msgstr "Đảo ngược"
 
 msgid "Romania"
 msgstr "Romania"
@@ -6767,7 +6741,7 @@ msgid "Romanian"
 msgstr "Romanian"
 
 msgid "Root"
-msgstr "Nguồn gốc"
+msgstr "Thư mục gốc"
 
 msgid "Root directory"
 msgstr "Thư mục gốc"
@@ -6875,7 +6849,7 @@ msgid "Sao Tome and Principe"
 msgstr "Sao Tome và Principe"
 
 msgid "Sat"
-msgstr "Ngồi"
+msgstr "Trình tìm kiếm Sat"
 
 msgid "Satellite"
 msgstr "Vệ tinh"
@@ -6896,7 +6870,7 @@ msgid "Satellites"
 msgstr "Vệ tinh"
 
 msgid "Sats"
-msgstr "Sats"
+msgstr "Tìm kiếm Sats"
 
 msgid "Saturation"
 msgstr "Độ bão hòa"
@@ -6992,11 +6966,8 @@ msgstr "Quét thất bại!"
 msgid "Scan files..."
 msgstr "Quét tập tin ..."
 
-#, fuzzy
 msgid "Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Quét các tiện ích mở rộng cục bộ và cài đặt chúng."
+msgstr "Quét các tiện ích mở rộng cục bộ và cài đặt chúng."
 
 msgid "Scan options"
 msgstr "Tùy chọn quét"
@@ -7349,9 +7320,8 @@ msgstr "Chọn bộ ký tự dịch chuyển bàn phím ảo cho chỉ ký tự 
 msgid "Select update source"
 msgstr "Chọn nguồn nâng cấp"
 
-#, fuzzy
 msgid "Select update source to edit"
-msgstr "Chọn nguồn nâng cấp để chỉnh sửa."
+msgstr "Chọn nguồn nâng cấp để chỉnh sửa"
 
 msgid "Select video input with up/down buttons"
 msgstr "Chọn đầu vào video với các nút lên / xuống"
@@ -7368,12 +7338,10 @@ msgstr "Chọn nhà cung cấp ATSC của bạn."
 msgid "Select your Skin"
 msgstr "Chọn làn da của bạn"
 
-#, fuzzy
 msgid ""
 "Select your backup device.\n"
 "Current device: "
 msgstr ""
-"\n"
 "Chọn thiết bị sao lưu của bạn.\n"
 "Thiêt bị hiện tại: "
 
@@ -7848,9 +7816,8 @@ msgstr "Hiển thị trình phát radio ..."
 msgid "Show the tv player..."
 msgstr "Hiển thị trình phát tv ..."
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Giới hạn bộ ký tự để ghi tên tệp"
+msgstr "Hiển thị các ký tự gạch chân trong tên tệp"
 
 msgid "Show vertical timelines"
 msgstr "Hiển thị các mốc thời gian dọc"
@@ -7919,7 +7886,7 @@ msgid "Singapore"
 msgstr "Singapore"
 
 msgid "Single"
-msgstr "Độc thân"
+msgstr "Đơn"
 
 msgid "Single EPG"
 msgstr "EPG đơn"
@@ -9760,11 +9727,8 @@ msgstr "Xem teletext ..."
 msgid "View video CD..."
 msgstr "Xem CD video ..."
 
-#, fuzzy
 msgid "View, install and remove available or installed packages."
-msgstr ""
-"\n"
-"Xem, cài đặt và loại bỏ các gói có sẵn hoặc cài đặt."
+msgstr "Xem, cài đặt và loại bỏ các gói có sẵn hoặc cài đặt."
 
 msgid "Virgin Islands (British)"
 msgstr "Xem video CD ..."
