all po files updated from develop at 2019-11-19 20:13

--- a/po/hr.po
+++ b/po/hr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-18 18:59+0100\n"
-"PO-Revision-Date: 2019-10-31 04:18+0100\n"
+"PO-Revision-Date: 2019-11-19 18:30+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -11,14 +11,14 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgid ""
 "\n"
 "After pressing OK, please wait!"
 msgstr ""
 "\n"
-"Nakon pritiska na OK, molimo pričekajte!"
+"Nakon pritiska na OK, molim pričekajte!"
 
 msgid ""
 "\n"
@@ -39,7 +39,7 @@ msgid ""
 "Press OK or Exit to abort!"
 msgstr ""
 "\n"
-"Pritisnite OK ili exit za prekid!"
+"Pritisnite OK ili EXIT za prekid!"
 
 msgid ""
 "\n"
@@ -101,7 +101,7 @@ msgid " packages selected."
 msgstr " izabrano paketa."
 
 msgid " updates available."
-msgstr " ažuriranja dostupna."
+msgstr " dostupna ažuriranja."
 
 #, python-format
 msgid "%.0f GB"
@@ -759,7 +759,6 @@ msgstr "Dodaj novi titl"
 msgid "Add bookmark"
 msgstr "Dodaj oznaku"
 
-#, fuzzy
 msgid "Add bouquet"
 msgstr "dodaj paket"
 
@@ -790,7 +789,6 @@ msgstr "Dodaj snimku (zaustavi poslije trenutnog događaja)"
 msgid "Add service"
 msgstr "Dodaj kanal"
 
-#, fuzzy
 msgid "Add services to this bouquet?"
 msgstr "dodaj kanal u paket"
 
@@ -1686,9 +1684,8 @@ msgstr "Kanali"
 msgid "Channels and EPG"
 msgstr "Kanali i EPG"
 
-#, fuzzy
 msgid "Channels only"
-msgstr "Kanali"
+msgstr "Samo kanali"
 
 msgid "Chap."
 msgstr "Pogl."
@@ -2990,7 +2987,7 @@ msgid "EPG language selection 2"
 msgstr "Odaberite jezik za EPG 2"
 
 msgid "EPG only"
-msgstr ""
+msgstr "Samo EPG"
 
 msgid "EPG selection"
 msgstr "EPG izbor"
@@ -4171,7 +4168,7 @@ msgid "Icons"
 msgstr "Ikone"
 
 msgid "If disabled, underline characters in file and directory names are not shown and are replaced with spaces."
-msgstr ""
+msgstr "Ako je onemogućeno, podcrtani znakovi u imenima datoteka i direktorija nisu prikazani i zamijenjeni su razmacima."
 
 msgid "If enabled, bookmarks will be updated with the new location when you move or copy a recording."
 msgstr "Ako je omogućeno, oznake će se ažurirati novim mjestom kada premjestite ili kopirate snimku."
@@ -4246,9 +4243,8 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Uvezite kanale i/ili EPG iz URL-a udaljenog primatelja i kada prijemnik izlazi iz stanja mirovanja"
 
-#, fuzzy
 msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Uvezite kanale iz udaljenog URL-a primatelja kada se on pokrene."
+msgstr "Uvoz kanala iz udaljenog URL-a primatelja kada je pokrenut."
 
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Uvoz kanala i/ili EPG iz URL-a udaljenog primatelja kada se prijemnik ili enigma2 ponovno pokrene"
@@ -5287,7 +5283,7 @@ msgid "No HDD found or HDD not initialized!"
 msgstr "HDD nije pronađen ili nije inicijaliziran!"
 
 msgid "No active subservices available."
-msgstr "Nema dostupnih aktivnih usluga."
+msgstr "Nema dostupnih aktivnih podusluga."
 
 msgid "No age block"
 msgstr "Nema dobne granice"
@@ -6395,7 +6391,7 @@ msgid "Really delete done timers?"
 msgstr "Stvarno želite obrisati izvršene tajmere?"
 
 msgid "Really exit the subservices quickzap?"
-msgstr "Da li stvarno želite izaći iz brzog pregleda podsustava?"
+msgstr "Da li stvarno želite izaći iz brzog pregleda podusluga?"
 
 msgid "Really reboot now?"
 msgstr "Dali stvarno želite ponovno pokrenuti?"
@@ -7842,9 +7838,8 @@ msgstr "Prikažite radio player......"
 msgid "Show the tv player..."
 msgstr "Prikažite tv player..."
 
-#, fuzzy
 msgid "Show underline characters in filenames"
-msgstr "Ograničen skup znakova u nazivima zapisa"
+msgstr "Pokaži podcrtane znakove u nazivima datoteka"
 
 msgid "Show vertical timelines"
 msgstr "Prikažite okomite vremenske linije"
@@ -8356,10 +8351,10 @@ msgid "Strongest position"
 msgstr "Najjača pozicija"
 
 msgid "Subservice list..."
-msgstr "Popis pod-usluga usluga..."
+msgstr "Popis podusluga usluga..."
 
 msgid "Subservices"
-msgstr "Pod-usluge"
+msgstr "Podusluge"
 
 msgid "Subtitle Quickmenu"
 msgstr "Brzi izbornik titla"
